add models User and Device

--- a/.gitignore
+++ b/.gitignore
@@ -112,9 +112,8 @@ media/
 *.db
 *.pid
 
-# Ignore Django Migrations in Development if you are working on team
+# Ignore Django Migrations
 
-# Only for Development only
-# **/migrations/**
-# !**/migrations
-# !**/migrations/__init__.py
+**/migrations/**
+!**/migrations
+!**/migrations/__init__.py
